# postrust

./: .gitignore  ASYNC_REFACTOR.md  AUDIT_PHASE11.md  COMPATIBILITY.md  Cargo.toml  Dockerfile.test  PLAN-CI-REGRESSION.md  PORTING.md  README.md  ROADMAP.md
.githooks/: pre-push
.github/workflows/: ci.yml  compat.yml  pages.yml  perf-bench.yml
assets/: demo.tape
benches/: clickbench_bench.rs  engine_bench.rs  tpch_bench.rs
excel-addin/: README.md  serve.js  taskpane.html  test-node.js  test.html
implementation-plan/: 00-refactor-to-pg-layout.md  01-catalog-and-names.md  02-ddl-core-create-drop-alter.md  03-row-store-and-scans.md  04-dml-insert-update-delete-returning.md  05-constraints-and-defaults.md  06-transactions-and-mvcc-lite.md  07-parser-coverage.md  08-parse-analysis-and-type-system.md  09-system-catalog-and-dependencies.md  10-planner-optimizer.md  11-executor-node-parity.md  12-ddl-surface-area.md  13-dml-semantic-parity.md  14-type-function-operator-parity.md  15-security-roles-rls.md  16-protocol-and-client-compat.md  17-regression-compat-and-hardening.md  18-logical-replication-target.md  README.md
notebook/: README.md  index.html
proptest-regressions/tcop/: property_tests.txt
scripts/: build_wasm.sh  compare_benchmarks.py  load_clickbench.sh  load_tpch.sh
scripts/compat/: README.md  psql_smoke.sh  run_regression.sh
sql/extensions/: openferric.sql
src/: browser.rs  lib.rs  main.rs
src/access/transam/: xact.rs
src/analyzer/: binding.rs  functions.rs  mod.rs  tests.rs  types.rs
src/catalog/: dependency.rs  mod.rs  oid.rs  schema.rs  search_path.rs  system_catalogs.rs  table.rs
src/commands/: alter.rs  create_table.rs  do_block.rs  drop.rs  explain.rs  extension.rs  function.rs  index.rs  matview.rs  mod.rs  schema.rs  sequence.rs  subscription.rs  variable.rs  view.rs
src/executor/: exec_expr.rs  exec_main.rs  mod.rs  node_cte.rs
src/extensions/: mod.rs  openferric.rs
src/parser/: ast.rs  lexer.rs  mod.rs  scansup.rs  sql_parser.rs
src/planner/: cost.rs  logical.rs  mod.rs  physical.rs  stats.rs  tests.rs
src/plpgsql/: compiler.rs  executor.rs  mod.rs  scanner.rs  types.rs
src/protocol/: copy.rs  messages.rs  mod.rs  startup.rs
src/replication/: apply.rs  client.rs  initial_sync.rs  mod.rs  pgoutput.rs  schema_sync.rs  slot.rs  subscription.rs  tuple_decoder.rs
src/security/: acl.rs  mod.rs  rls.rs  roles.rs
src/storage/: tuple.rs
src/tcop/: engine.rs  engine_tests.rs  mod.rs  postgres.rs  pquery.rs  property_tests.rs  utility.rs
src/txn/: mod.rs  snapshot.rs  visibility.rs
src/utils/: fmgr.rs
src/utils/adt/: datetime.rs  float.rs  int_arithmetic.rs  json.rs  math_functions.rs  misc.rs  mod.rs  string_functions.rs
tests/: benchmark.rs  differential.rs  measure_arrays.rs  regression.rs  subselect_runner.rs
tests/benchmark/: clickbench_data.sql  clickbench_queries.rs  clickbench_schema.sql  tpch_data.sql  tpch_queries.rs  tpch_schema.sql
tests/differential/: sql_fixtures.rs
tests/integration/: package.json  replication_test.js
tests/regression/: basic_sql.rs  pg_compat.rs  pg_compat_simplified.rs
tests/regression/corpus/: basic.sql
tests/regression/pg_compat/: README.md  analyze_results.py
tests/regression/pg_compat/results/: compatibility_summary.txt  pg18_compatibility_results.json
web/: README.md  index.html
web/pkg/: postgrust.js  postgrust_bg.wasm
