[package]
name = "postgrust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
regex = "1.11.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.82"
web-sys = { version = "0.3.82", features = ["Window", "Response", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
rcgen = "0.12.1"
rustls = "0.21.12"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tungstenite = { version = "0.24", features = ["native-tls"] }
