[package]
name = "postgrust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
regex = "1.11.2"
serde_json = "1.0.145"
sha2 = "0.10.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.82"
web-sys = { version = "0.3.82", features = ["CloseEvent", "ErrorEvent", "Headers", "MessageEvent", "RequestInit", "Response", "WebSocket", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
byteorder = "1.5.0"
bytes = "1.6.0"
futures = "0.3.31"
md-5 = "0.10.6"
postgres-protocol = "0.6.10"
tokio-postgres = "0.7.16"
rand = "0.8.5"
rcgen = "0.12.1"
rustls = "0.21.12"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "engine_bench"
harness = false
